--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+NODE_ENV=development
 PORT=5000
-MONGO_URI=mongodb+srv://psantosh:santosh@cluster0.alubi.mongodb.net
-JWT_SECRET=key
+MONGO_URI=mongodb+srv://psantosh:santosh@cluster0.alubi.mongodb.net/Verdo_Dashboard?retryWrites=true&w=majority
+JWT_SECRET=82rYtErnFq_12345# CHANGE THIS to a strong random string
+JWT_EXPIRE=30d# Token expiry time (e.g., 30 days)
